--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="venta y armados de pc, customizacion" />
+  <meta name="keywords" content="MASTER RACE, PC, GAMERS, ARMADO, MODING, VENTA,CUSTOM, OFERTAS, CALIDAD-PRECIO" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/main.css" />
   <title>Home</title>
 </head>
 
 <body>
   <header class="header">
-    <h1><strong>HOME</strong></h1>
+    <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
   </header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -112,7 +115,33 @@
     </div>
   </main>
   <footer class="footer">
-    <h4 class="copyright">CoderHouse | Comision 24510 | 2da Entrega Final</h4>
+    <div class="social">
+      <ul>
+          <li>
+              <a href="#" class="btn--facebook">
+                  <i class="fa-brands fa-facebook"></i>
+              </a>
+          </li>
+          <li>
+              <a href="#" class="btn--twitter">
+                  <i class="fa-brands fa-twitter"></i>
+              </a>
+          </li>
+          <li>
+              <a href="#" class="btn--instagram">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
+          </li>
+          <li>
+              <a href="#" class="btn--youtube">
+                  <i class="fa-brands fa-youtube"></i>
+              </a>
+          </li>
+      </ul>
+  </div>
+  <div>
+    <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
+  </div>
   </footer>
 </body>
 
