--- a/pages/products.html
+++ b/pages/products.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="imagenes de los productos a la venta"/>
+    <meta name="keywords" content="CASES, FANS, MOTHERS, MONITORES, PLACAS DE VIDEO, RAM, SOLIDO, M2, WATERCOOLER, OFERTAS, VENTA" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/main.css">
     <title>Products</title>
 </head>
 
 <body>
     <header class="header">
-        <h1><strong>PRODUCTS</strong></h1>
+        <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -68,7 +71,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -98,7 +101,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -128,7 +131,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -160,7 +163,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -190,7 +193,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -220,7 +223,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -252,7 +255,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -282,7 +285,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -312,7 +315,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -344,7 +347,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -374,7 +377,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                          <!-- Modal -->
                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                          aria-hidden="true">
@@ -404,7 +407,7 @@
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
-                        <a href="#" class="btn btn-primary butt" data-bs-toggle="modal"
+                        <a href="#" class="btn btn-info butt" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">Buy Now</a>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -433,7 +436,33 @@
         </div>
     </main>
     <footer class="footer">
-        <h4 class="copyright">CoderHouse | Comision 24510 | 2da Entrega Final</h4>
+        <div class="social">
+            <ul>
+                <li>
+                    <a href="#" class="btn--facebook">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="btn--twitter">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="btn--instagram">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="btn--youtube">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
+        </div>
     </footer>
 </body>
 
