--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/main.css" />
   <title>Home</title>
 </head>
@@ -34,26 +35,13 @@
             <a class="nav-link active" aria-current="page" href="./pages/products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact us</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
-            </ul>
+            <a class="nav-link active" aria-current="page" href="./pages/aboutus.html">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active" aria-current="page" href="./pages/works.html">Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./pages/contactus.html">Contact us</a>
           </li>
         </ul>
         <form class="d-flex">
