--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -14,13 +14,14 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/main.css">
     <title>About us</title>
 </head>
 
 <body>
     <header class="header">
-        <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
+        <h1 class="animate__animated animate__backInRight"><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -107,8 +108,9 @@
             </p>
         </div>
         <div class="clearfix">
-            <img src="../img/watercooler.jpeg" class="col-md-6 float-md-start mb-3 ms-md-3 img-thumbnail" alt="watercooler">
-          
+            <img src="../img/watercooler.jpeg" class="col-md-6 float-md-start mb-3 ms-md-3 img-thumbnail"
+                alt="watercooler">
+
             <p class="text-about">
                 A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
                 quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
@@ -156,10 +158,10 @@
                 insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that
                 here.
             </p>
-          </div>
-          <div class="clearfix">
+        </div>
+        <div class="clearfix">
             <img src="../img/masterrace.jpeg" class="col-md-6 float-md-end mb-3 ms-md-3 img-thumbnail" alt="masterrace">
-          
+
             <p class="text-about">
                 A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
                 quite a few meaningless phrases here to demonstrate how the columns interact here with the floated
@@ -207,35 +209,41 @@
                 insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that
                 here.
             </p>
-          </div>
+        </div>
+        <div class="linksdown">
+            <h3>
+                <a class="linkdown" href="contactus.html">CONTACT US!!</a>
+            </h3>
+        </div>
     </main>
     <footer class="footer">
         <div class="social">
             <ul>
                 <li>
-                    <a href="#" class="btn--facebook">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
+                  <a href="https://www.facebook.com/" target="_blank" class="btn--facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
+                  <a href="https://twitter.com/" target="_blank" class="btn--twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+                  <a href="https://www.instagram.com/" target="_blank" class="btn--instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--youtube">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
+                  <a href="https://www.youtube.com/" target="_blank" class="btn--youtube">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </li>
-            </ul>
+              </ul>
         </div>
         <div>
-            <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
+            <h4 class="copyright animate__animated animate__pulse animate__infinite animate__slow">CoderHouse |
+                Comision 24510 | Proyecto Final Eduardo Senguer</h4>
         </div>
     </footer>
 </body>
