--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="css/main.css" />
   <title>Home</title>
 </head>
 
 <body>
   <header class="header">
-    <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
+    <h1 class="animate__animated animate__backInLeft animate__slower"><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
   </header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -98,38 +99,42 @@
       </button>
     </div>
     <div class="badge bg-secondary text-wrap mt-4">
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur voluptate error obcaecati at cum, repellendus quae ut maxime, nisi, autem sint nobis laudantium aspernatur! Nobis cum id libero doloribus sapiente?</p>
-      <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aliquid non nobis inventore aspernatur praesentium neque minus voluptatum. Voluptates reprehenderit in tempore quam, optio iure fugit nisi debitis ipsam beatae!</strong></p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur voluptate error obcaecati at cum, repellendus
+        quae ut maxime, nisi, autem sint nobis laudantium aspernatur! Nobis cum id libero doloribus sapiente?</p>
+      <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aliquid non nobis inventore aspernatur
+          praesentium neque minus voluptatum. Voluptates reprehenderit in tempore quam, optio iure fugit nisi debitis
+          ipsam beatae!</strong></p>
     </div>
   </main>
   <footer class="footer">
     <div class="social">
       <ul>
-          <li>
-              <a href="#" class="btn--facebook">
-                  <i class="fa-brands fa-facebook"></i>
-              </a>
-          </li>
-          <li>
-              <a href="#" class="btn--twitter">
-                  <i class="fa-brands fa-twitter"></i>
-              </a>
-          </li>
-          <li>
-              <a href="#" class="btn--instagram">
-                  <i class="fa-brands fa-instagram"></i>
-              </a>
-          </li>
-          <li>
-              <a href="#" class="btn--youtube">
-                  <i class="fa-brands fa-youtube"></i>
-              </a>
-          </li>
+        <li>
+          <a href="https://www.facebook.com/" target="_blank" class="btn--facebook">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/" target="_blank" class="btn--twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank" class="btn--instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/" target="_blank" class="btn--youtube">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+        </li>
       </ul>
-  </div>
-  <div>
-    <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
-  </div>
+    </div>
+    <div>
+      <h4 class="copyright animate__animated animate__pulse animate__infinite animate__slow">CoderHouse | Comision 24510
+        | Proyecto Final Eduardo Senguer</h4>
+    </div>
   </footer>
 </body>
 
