--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -2,25 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="contactese con nuestro equipo" />
     <meta name="keywords" content="CONTACTO, MENSAJE, WHATSAPP, REDES SOCIALES, E-MAIL, HABLANOS" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Contact us</title>
 </head>
 
 <body>
     <header class="header">
-        <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
+        <h1 class="animate__animated animate__bounceInDown"><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -55,60 +56,67 @@
         </div>
     </nav>
     <main class="container">
-       <div class="row">
-           <div class="col-md-6 mt-4">
-               <img src="../img/woods.jpeg" class="img-thumbnail" alt="bosque">
-           </div>
-           <div class="col-md-6">
-            <div class="form-floating mt-4 text-success">
-                <input type="name" class="form-control" id="floatingname" placeholder="Name">
-                <label for="floatingname">Name</label>
-              </div>
-              <div class="form-floating mt-4 text-success">
-                <input type="lastname" class="form-control" id="floatinglastname" placeholder="Lastname">
-                <label for="floatinglastname">Lastname</label>
-              </div>
-            <div class="form-floating mb-3 mt-4 text-success">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
-              </div>
-              <div class="form-floating mb-4 text-success">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                <label for="floatingTextarea2">Comments</label>
-              </div>
-              <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-outline-secondary" type="button">Send</button>
-              </div>
-           </div>
-       </div>
+        <div class="row">
+            <div class="col-md-6 mt-4">
+                <img src="../img/woods.jpeg" class="img-thumbnail" alt="bosque" />
+            </div>
+            <div class="col-md-6">
+                <div class="form-floating mt-4 text-success">
+                    <input type="name" class="form-control" id="floatingname" placeholder="Name" />
+                    <label for="floatingname">Name</label>
+                </div>
+                <div class="form-floating mt-4 text-success">
+                    <input type="lastname" class="form-control" id="floatinglastname" placeholder="Lastname" />
+                    <label for="floatinglastname">Lastname</label>
+                </div>
+                <div class="form-floating mb-3 mt-4 text-success">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" />
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-4 text-success">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Comments</label>
+                </div>
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button class="btn btn-outline-secondary" type="button">
+                        Send
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="social">
             <ul>
                 <li>
-                    <a href="#" class="btn--facebook">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
+                  <a href="https://www.facebook.com/" target="_blank" class="btn--facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
+                  <a href="https://twitter.com/" target="_blank" class="btn--twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+                  <a href="https://www.instagram.com/" target="_blank" class="btn--instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--youtube">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
+                  <a href="https://www.youtube.com/" target="_blank" class="btn--youtube">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </li>
-            </ul>
+              </ul>
         </div>
         <div>
-            <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
+            <h4 class="copyright animate__animated animate__pulse animate__infinite animate__slow">
+                CoderHouse | Comision 24510 | Proyecto Final Eduardo Senguer
+            </h4>
         </div>
     </footer>
-</body>    
+</body>
+
+</html>
