--- a/pages/works.html
+++ b/pages/works.html
@@ -14,13 +14,14 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/503f2ed0c9.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/main.css">
     <title>Works</title>
 </head>
 
 <body>
     <header class="header">
-        <h1><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
+        <h1 class="animate__animated animate__backInUp"><strong>COMPUMUNDO HIPERMEGARED</strong></h1>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -60,103 +61,109 @@
                 <figure class="figure">
                     <img src="../img/work1.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work2.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-center">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work3.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work4.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work5.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-center">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work6.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work7.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work8.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-center">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work9.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work10.webp" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work11.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-center">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
             <div class="col-md-4">
                 <figure class="figure">
                     <img src="../img/work12.jpeg" class="figure-img img-fluid rounded" alt="work">
                     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-                  </figure>
+                </figure>
             </div>
+        </div>
+        <div class="linksdown">
+            <h3>
+                <a class="linkdown" href="aboutus.html">KNOW US!!</a>
+            </h3>
         </div>
     </main>
     <footer class="footer">
         <div class="social">
             <ul>
                 <li>
-                    <a href="#" class="btn--facebook">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
+                  <a href="https://www.facebook.com/" target="_blank" class="btn--facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
+                  <a href="https://twitter.com/" target="_blank" class="btn--twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+                  <a href="https://www.instagram.com/" target="_blank" class="btn--instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
                 </li>
                 <li>
-                    <a href="#" class="btn--youtube">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
+                  <a href="https://www.youtube.com/" target="_blank" class="btn--youtube">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
                 </li>
-            </ul>
+              </ul>
         </div>
         <div>
-            <h4 class="copyright">CoderHouse | Comision 24510 | 3ra Entrega Final</h4>
+            <h4 class="copyright animate__animated animate__pulse animate__infinite animate__slow">CoderHouse | Comision
+                24510 | Proyecto Final Eduardo Senguer</h4>
         </div>
     </footer>
-</body>    
+</body>
