--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -87,7 +87,7 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="social">
+        <div class="social me-2">
             <ul>
                 <li>
                   <a href="https://www.facebook.com/" target="_blank" class="btn--facebook">
